header, hero, nav styled - missing hero title spacing, header and hero title box overlay

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <!-- Navigation -->
         <header>
                 <h1>Kashay Arbelo</h1>
-        </header>
         <nav>
                 <ul>
                         <li>
@@ -27,6 +26,7 @@
                         </li>
                 </ul>
         </nav>
+        </header>
         <!-- Hero -->
         <section class="hero">
                 <div class="hero-title">
@@ -50,6 +50,7 @@
                                 </p>
                         </div>
                 </section>
+                <!-- Work -->
                 <section id="#work" class="work">
                         <div class="body-title">
                                 <h2>Work</h2>
