body grid styled, text decoration still not working

--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style2.css" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kashay Arbelo</title>
@@ -66,27 +66,27 @@
                 <div class="body-box contact-title">
                         <h2>Contact Me</h2>
                 </div>
-                <div class="contact-grid phone">
+                <div class="contact-grid phone noDecoration">
                         <a hfre="tel:+16028282466">
-                                (602) 828-2466
+                                (602)828-2466
                         </a>
                 </div>
-                <div class="contact-grid email">
+                <div class="contact-grid email noDecoration">
                         <a href="mailto:kashay@arbelo.me">
                                 Kashay@Arbelo.me
                         </a>
                 </div>
-                <div class="contact-grid github">
+                <div class="contact-grid github noDecoration">
                         <a href="https://github.com/KashCodes">
                                 GitHub
                         </a>
                 </div>
-                <div class="contact-grid twitter">
+                <div class="contact-grid twitter noDecoration">
                         <a href="https://twitter.com/KashCodes">
                                 Twitter
                         </a>
                 </div>
-                <div class="contact-grid spotify">
+                <div class="contact-grid spotify noDecoration">
                         <a href="https://open.spotify.com/user/xx-kashay-xx?si=kprq_5lsRki06PX8bS64xw">
                                 Spotify
                         </a>
