--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
         </section>
         <!-- Main Body -->
-        <div class="main">
+        
                 <!-- About Me -->
-                <section id="#about-me" class="about-me">
+                <section id="#about-me" class="about-me main">
                         <div class="body-title">
                                 <h2>About Me</h2>
                         </div>
@@ -51,22 +51,42 @@
                         </div>
                 </section>
                 <!-- Work -->
-                <section id="#work" class="work">
+                <section id="#work" class="work main">
                         <div class="body-title">
                                 <h2>Work</h2>
                         </div>
                         <div class="body-box">
                                 <div class="work-wrapper">
-                                        <div class="work-grid run-buddy">Run Buddy</div>
-                                        <div class="work-grid horiseon">Horiseon</div>
-                                        <div class="work-grid proj3">Project 3</div>
-                                        <div class="work-grid proj4">Project 4</div>
-                                        <div class="work-grid proj5">Project 5</div>
+                                        <div class="work-grid run-buddy">
+                                                <a  href="https://kashcodes.github.io/run-buddy/">
+                                                        <h3 class="title-link">Run Buddy</h3>
+                                                </a>
+                                        </div>
+                                        <div class="work-grid horiseon">
+                                                <a  href="https://kashcodes.github.io/horiseon/">
+                                                        <h3 class="title-link">Horiseon</h3>
+                                                </a>
+                                        </div>
+                                        <div class="work-grid proj3">
+                                                <a href="#work">
+                                                        <h3 class="title-link">Project 3</h3>
+                                                </a>
+                                        </div>
+                                        <div class="work-grid proj4">
+                                                <a href="#work">
+                                                        <h3 class="title-link">Project 4</h3>
+                                                </a>
+                                        </div>
+                                        <div class="work-grid proj5">
+                                                <a href="#work">
+                                                        <h3 class="title-link">Project 5</h3>
+                                                </a>
+                                        </div>
                                 </div>
                         </div>
                 </section>
                 <!-- Contact Me -->
-                <section id="#contact-me" class="contact-me">
+                <section id="#contact-me" class="contact-me main">
                         <div class="body-title">
                                 <h2>Contact Me</h2>
                         </div>
@@ -74,7 +94,7 @@
                                 <div class="contact-wrapper">
                                         <div class="contact-grid">
                                                 <a hfre="tel:+16028282466">
-                                                        (602) 828-2466
+                                                        (602)828-2466
                                                 </a>
                                         </div>
                                         <div class="contact-grid">
@@ -100,6 +120,6 @@
                                 </div>
                         </div>
                 </section>
-        </div>
+        
 </body>
 </html>
