--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         </div>
                         <div class="body-box">
                                 <p>
+                                        <img src="../images/biopic.jpg" alt="Bio Pic">
                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga ratione quas dolorum dolorem recusandae minus enim eligendi dignissimos est, blanditiis facilis delectus quae ea expedita, iste reprehenderit debitis labore suscipit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque vel rem sed debitis maiores voluptas ratione cupiditate, nostrum perferendis omnis dolor sunt alias et nemo cumque assumenda molestias numquam ea.
                                 </p>
                                 </br>
