--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
       <div class="body-box">
         <div class="work-wrapper">
           <div class="work-grid run-buddy">
-            <a  href="https://kashcodes.github.io/run-buddy/">
+            <a  href="https://kashcodes.github.io/run-buddy/" alt="Run Buddy">
               <h3 class="title-link">Run Buddy</h3>
             </a>
           </div>
           <div class="work-grid horiseon">
-            <a  href="https://kashcodes.github.io/horiseon/">
+            <a  href="https://kashcodes.github.io/horiseon/" alt="Horiseon">
               <h3 class="title-link">Horiseon</h3>
             </a>
           </div>
           <div class="work-grid proj3">
-            <a href="#work">
+            <a href="#work" alt="Project 3">
               <h3 class="title-link">Project 3</h3>
             </a>
           </div>
           <div class="work-grid proj4">
-            <a href="#work">
+            <a href="#work" alt="Project 4">
               <h3 class="title-link">Project 4</h3>
             </a>
           </div>
           <div class="work-grid proj5">
-            <a href="#work">
+            <a href="#work" alt="Project 5">
               <h3 class="title-link">Project 5</h3>
             </a>
           </div>
