everything but hover affects and mobile queries

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <a href="#work">Work</a>
         </li>
         <li>
-            <a href="contact-me">Contact Me</a>
+            <a href="#contact-me">Contact Me</a>
         </li>
         <li>
-            <a href="#resume">Resume</a>
+            <a href="https://www.linkedin.com/in/kashay-arbelo-11b83a1b9/">Resume</a>
         </li>
     </ul>
   </nav>
@@ -36,7 +36,7 @@
     <!-- Main Body -->
 
     <!-- About Me -->
-    <section id="#about-me" class="about-me main">
+    <section id="about-me" class="about-me main">
       <div class="body-title">
           <h2>About Me</h2>
       </div>
@@ -52,7 +52,7 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="#work" class="work main">
+    <section id="work" class="work main">
       <div class="body-title">
         <h2>Work</h2>
       </div>
@@ -69,17 +69,17 @@
             </a>
           </div>
           <div class="work-grid proj3">
-            <a href="#work" alt="Project 3">
+            <a href="work" alt="Project 3">
               <h3 class="title-link">Project 3</h3>
             </a>
           </div>
           <div class="work-grid proj4">
-            <a href="#work" alt="Project 4">
+            <a href="work" alt="Project 4">
               <h3 class="title-link">Project 4</h3>
             </a>
           </div>
           <div class="work-grid proj5">
-            <a href="#work" alt="Project 5">
+            <a href="work" alt="Project 5">
               <h3 class="title-link">Project 5</h3>
             </a>
           </div>
@@ -87,7 +87,7 @@
       </div>
     </section>
     <!-- Contact Me -->
-    <section id="#contact-me" class="contact-me main">
+    <section id="contact-me" class="contact-me main">
       <div class="body-title">
         <h2>Contact Me</h2>
       </div>
