3rd project added

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </a>
           </div>
           <div class="work-grid proj3">
-            <a href="work" alt="Project 3">
-              <h3 class="title-link">Project 3</h3>
+            <a href="https://sly-is-the-fox.github.io/Sly-Is-The-Fox/index.html" alt="Sly Is The Fox Trivia Game">
+              <h3 class="title-link">Sly Is The Fox Trivia</h3>
             </a>
           </div>
           <div class="work-grid proj4">
