coding bootcamp survival guide project added

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             </a>
           </div>
           <div class="work-grid proj4">
-            <a href="work" alt="Project 4">
-              <h3 class="title-link">Project 4</h3>
+            <a href="https://coding-bootcamp-survival-guide.herokuapp.com/" alt="Coding Bootcamp Survival Guide">
+              <h3 class="title-link">Coding Bootcamp Survival Guide</h3>
             </a>
           </div>
           <div class="work-grid proj5">
